# arcana-embedded-stm32

./: .cproject  .gitignore  .project  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEBUG_WITH_OPENCODE.md  Dockerfile.ci  Dockerfile.test  FSDB_DEBUG_GUIDE.md  Jenkinsfile  LICENSE  README.md  arcana-embedded-stm32.ioc  arcanats_db_plan.md  coverage.xml  docker-compose.ci.yml  docker-compose.test.yml  flash-debug.sh  gdb_debug.gdb  openocd.cfg  read_serial.py  sonar-project.properties  stm32-security-plan.md  stm32-view-plan.md
.cor-afp-ntp/: current-process.json  phase-summary.md  validation-chain.json
.cor-afp-ntp-current/: WORK_LOG.md  WORK_STATE.md  current-process.json
.cor-afp-ntp/00-init/: README.md  bug-analysis.md  checklist.md  exit.sh  references.md  requirements.md  target-files.json
.cor-afp-ntp/01-analysis/: README.md  analysis-report.md  checklist.md
.cor-afp-ntp/02-design/: README.md  checklist.md
.cor-afp-ntp/03-impl/: README.md  checklist.md
.cor-afp-ntp/04-validation/: README.md  checklist.md  validation-report.md
.cor-afp-ntp/05-finalize/: README.md  checklist.md  exit.sh  final-report.md
.cor-protocol/: OPENCODE_KIMI_EXECUTION_PROTOCOL.md  README.md
.cor-protocol/scripts/: init-cor-afp-ntp.sh  node-transition.sh  quick-health-check.sh  recover-state.sh
Core/Inc/: App.hpp  CommandService.hpp  Crc16.hpp  FreeRTOSConfig.h  Models.hpp  Observable.hpp  TimeDisplayService.hpp
Core/Src/: App.cpp  CommandCodec.cpp  CommandDispatcher.cpp  CommandService.cpp  Observable.cpp  TimeDisplayService.cpp  TimerService.cpp  main.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c
Core/Startup/: startup_stm32f051c8tx.s
Shared/Inc/: App.hpp  CommandDispatcher.hpp  CommandRegistry.hpp  CommandTypes.hpp  CryptoEngine.hpp  EventCodes.hpp  FrameAssembler.hpp  FrameCodec.hpp  KeyExchangeManager.hpp  Log.hpp  Observable.hpp  Sha256.hpp  arcana_cmd.pb.h  arcana_cmd.proto  ota_header.h  registration.pb.h
Shared/Inc/ats/: ArcanaTsDb.hpp  ArcanaTsSchema.hpp  ArcanaTsTypes.hpp  Crc32.hpp  IFilePort.hpp
Shared/Inc/command/: ICommand.hpp
Shared/Inc/command/codec/: FrameAssembler.hpp  registration.pb.h
Shared/Inc/core/log/: Log.hpp
Shared/Inc/core/validation/: Crc32.hpp
Shared/Inc/display/: BitmapButton.hpp  DisplayConfig.hpp  DisplayStatus.hpp  TouchTypes.hpp
Shared/Inc/mbedtls/: mbedtls_config.h
Shared/Inc/view/: DialogWidgets.hpp  FormWidgets.hpp  IDisplay.hpp  MutexDisplay.hpp  Widget.hpp
Shared/Src/: KeyExchangeManager.cpp  Observable.cpp  TimerService.cpp  registration.pb.c
Shared/Src/ats/: ArcanaTsDb.cpp
Shared/Src/command/codec/: arcana_cmd.pb.c  registration.pb.c
Shared/Src/command/security/: CryptoEngine.cpp
Shared/Src/mbedtls/: entropy_hardware_alt.c
Shared/proto/: registration.options  registration.pb.h  registration.proto
Targets/stm32f051c8/: .cproject  .mxproject  .project  STM32F051C8TX_FLASH.ld
Targets/stm32f051c8/Core/Inc/: stm32f0xx_it.h
Targets/stm32f051c8/Core/Src/: stm32f0xx_hal_msp.c  syscalls.c  sysmem.c
Targets/stm32f051c8/Main/command/: CommandService.cpp
Targets/stm32f051c8/Main/service/: TimeDisplayService.hpp  TimerService.hpp
Targets/stm32f051c8/Services/command/: CommandRegistry.cpp
Targets/stm32f051c8/Services/service/: CounterService.cpp  CounterService.hpp  TimeDisplayService.cpp
Targets/stm32f103ze/: .cproject  .mxproject  .project  PLAN-NTP-TSDB-Export.md  STM32F103ZETX_FLASH.ld  arcana-embedded-f103.ioc  makefile.targets
Targets/stm32f103ze-bootloader/: Makefile  STM32F103ZETX_BOOTLOADER.ld
Targets/stm32f103ze-bootloader/Bootloader/: bl_flash.c  bl_flash.h  bl_uart.c  bl_uart.h
Targets/stm32f103ze-bootloader/FatFs/: bl_diskio.c  ffconf.h
Targets/stm32f103ze/Debug/: makefile  objects.list  sources.mk
Targets/stm32f103ze/Main/: App.cpp  AppContainer.cpp
Targets/stm32f103ze/Services/: AppContainer.hpp  AtsStorageServiceImpl.cpp  DhtSensor.cpp  EcgBuffer.hpp  Esp8266.cpp  FatFsFilePort.cpp  LcdServiceImpl.cpp  LcdServiceImpl.hpp  LcdViewModel.hpp  LightServiceImpl.hpp  MainView.cpp  SdBenchmarkServiceImpl.cpp  SdStorageServiceImpl.cpp  SystemClock.hpp  WifiServiceImpl.cpp
Tests/: CMakeLists.txt  test_app_entry.cpp  test_app_f051_wrap.cpp  test_appenders.cpp  test_arcanats_db.cpp  test_atsstorage.cpp  test_ble.cpp  test_chacha20.cpp  test_command_bridge.cpp  test_command_codec.cpp  test_commands.cpp  test_commands_f103.cpp  test_crc16.cpp  test_crc32.cpp  test_crypto_engine.cpp  test_dispatcher.cpp  test_display_clock.cpp  test_esp8266_driver.cpp  test_esp_flasher.cpp  test_fatfs_file_port.cpp  test_frame_assembler.cpp  test_frame_codec.cpp  test_hc08ble_driver.cpp  test_httpupload.cpp  test_i2c_drivers.cpp  test_key_exchange.cpp  test_lcd_viewmodel.cpp  test_log.cpp  test_main_view.cpp  test_models.cpp  test_mqtt.cpp  test_mqtt_packet.cpp  test_observable.cpp  test_observable_errors.cpp  test_ota.cpp  test_ota_header.cpp  test_registration.cpp  test_registry.cpp  test_services.cpp  test_services_f103.cpp  (+4 more)
Tests/mocks/: AtsStorageServiceImpl_stub.cpp  Credentials.hpp  DeviceKey.hpp  Esp8266.hpp  Esp8266_stub.cpp  FreeRTOS.h  FreeRTOSConfig.h  Hc08Ble.hpp  Hc08Ble_stub.cpp  RegistrationServiceImpl_stub.cpp  SystemClock.hpp  ats_mocks.hpp  atsstorage_host_stubs.cpp  cmsis_os.h  diskio.h  display_stubs.cpp  ff.h  ff_host_stub.cpp  freertos_stubs.cpp  mbedtls_host_entropy.c  portmacro.h  projdefs.h  queue.h  semphr.h  sensor_drivers_stub.cpp  stm32f1xx_hal.h  task.h  test_hal_stub.cpp  test_helpers.h  timers.h
docs/: registration-ecdh-ecdsa-plan.md
test/: ota_test_server.py
tools/: EspPassthrough.cpp  README.md  arcanats.py  ble-sensor-monitor.js  mqtt_crypto_test.py  mqtt_long_test.py  mqtt_monitor.py  upload_server.py
tools/arch-qube/: stm32.yaml
tools/ble-cmd-test/: ble-transport.js  commands.js  crypto.js  index.js  package-lock.json  package.json  protobuf.js  protocol.js
tools/esp8266_fw/: ESP8266_FLASH_GUIDE.md
tools/server/: Dockerfile  docker-compose.yml  registration_api.py  schema.sql  test_register.py
tools/server/mqtt/: docker-compose.yml
(+214 files in other folders)
